# Kaizen

./: .gitignore  Cargo.toml  README.md  astro.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
public/: splash.html
src/: App.tsx  console.rs  index.css  logger.rs  main.rs  main.tsx  updater.rs  windows_api.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  windows_api.rs
src-tauri/src/tools/: cleaner.rs  downloader.rs  mod.rs
src/commands/: activator.rs  cleaner.rs  mod.rs
src/components/: Countdown.tsx  Modal.tsx  RequiresAdmin.tsx  UpdateModal.tsx
src/components/content/: Cleaner.tsx  Downloader.tsx
src/components/generic/: Checkbox.tsx  Countdown.tsx  Label.tsx  Modal.tsx  Warning.tsx
src/layouts/: Layout.astro
src/pages/: Home.tsx  Roadmap.tsx  Settings.tsx  index.astro  roadmap.astro  settings.astro
src/pages/tools/: Cleaner.tsx  Downloader.tsx  cleaner.astro  downloader.astro
