[package]
name = "ghost-toolkit"
version = "0.0.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "http2",
    "blocking",
    "json",
] }
serde_json = "1.0.120"
self-replace = "1.4.0"
crossterm = "0.27.0"
inquire = "0.7.5"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
