[package]
name = "ghost-toolkit"
version = "0.0.3"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "http2",
    "blocking",
    "json",
] }
serde_json = "1.0.120"
self-replace = "1.4.0"
crossterm = "0.27.0"
inquire = "0.7.5"
indicatif = "0.17.8"
winapi = { version = "0.3.9", features = ["securitybaseapi"] }

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
