[package]
name = "Kaizen"
version = "0.0.0"
authors = ["lambor590"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "dialog-save",
    "dialog-open",
    "path-all",
    "os-all",
    "updater",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
winapi = { version = "0.3.9", features = ["securitybaseapi", "handleapi"] }
serde_json = "1"
thiserror = "1.0.63"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "http2",
    "blocking",
    "json",
] }
zip = "2.2.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
debug = false
