[package]
name = "kaizen"
version = "0.0.0"
authors = ["lambor590"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.214", features = ["derive"] }
winapi = { version = "0.3.9", features = [
    "handleapi",
    "securitybaseapi",
    "winbase",
] }
serde_json = "1.0.132"
thiserror = "1.0.66"
lazy_static = "1.5.0"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "http2",
    "blocking",
    "json",
] }
zip = "2.2.0"
tauri-plugin-os = "2.0.1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-shell = "2.0.2"
tauri-plugin-process = "2.0.1"
tauri-plugin-updater = "2.0.2"
tauri-plugin-fs = "2.0.3"
rayon = "1.10.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
incremental = false
debug = false
